syntax = "proto3";

package Msg;

service PostMsg {
    rpc PostMsg(MsgRequest) returns(MsgReply){}
}

message MsgRequest {
    string msg = 1;
}

message MsgReply {
    string msg = 1;
    int64 unixtime = 2;
}
